@@ -190,5 +190,6 @@
         <file>img/abort24.png</file>
         <file>img/close.png</file>
         <file>img/go_back.png</file>
+        <file>img/reset_autoincrement.png</file>
     </qresource>
 </RCC>
