@@ -1,6 +1,7 @@
 [3.0.2]
         * [ADDED]: Full support for the interface translations.
         * [ADDED]: Polish translation.
+        * [ADDED]: #219 Reset autoincrement feature to context menu of table and to structure toolbar in table window.
         * [BUGFIX]: Fixed deleting column from table that is the only column covered by an index or an "UPDATE OF" trigger.
         * [BUGFIX]: #2703 Fixed compilation errors on GCC 4.9.
         * [BUGFIX]: #2707 Fixed crash when importing CSV file with empty value for last column.
